# ai_bobby_repository

./: .gitignore  Dockerfile  README.md  cloudbuild.yml  gel_hardness_classifier_pipeline.yaml  pyproject.toml
data/raw/: Gelation data_Hardness_Modeling_December_11.xlsx  Gelation_Hardness_data_OCT_2024.xlsx  gelation_hardness_dec_2024.csv  gelation_hardness_oct_2024.csv
data/test/: example_input.csv
docs/: trainin-and-inference-process-diagram.excalidraw
notebooks/: 1 - Initial Exploration.ipynb  2 - Train best model.ipynb  3 - Classification Model.ipynb  4 - Classification Model - December Data.ipynb  5 - Pipeline build.ipynb
src/: compile_pipeline.py
src/app/: main.py
