[project]
name = "ai-bobby-classification"
version = "0.1.0"
description = "AI Bobby Classification Model"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dice-ml>=0.9",
    "flaml[automl,catboost]>=2.3.2",
    "ipywidgets>=8.1.5",
    "joblib>=1.3.2",
    "jupyterlab>=4.3.0",
    "kfp>=2.11.0",
    "lightgbm>=4.5.0",
    "loguru>=0.7.3",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "shap>=0.46.0",
    "streamlit>=1.41.1",
    "tqdm>=4.67.0",
    "ydata-profiling>=4.12.0",
]
